rtg/src/components/bets/BetsStatusPanel.scss
@import '../../sass/colors.scss';
@import '../../sass/z-indexes.scss';

$height: 60px;

.BetsStatusPanel {
  position: fixed;
  left: -20px;
  right: -20px;
  bottom: 0;
  height: $height;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  align-items: center;

  background-color: white;
  box-sizing: border-box;
  box-shadow: rgba(0, 0, 0, 0.32) 0 5px 30px, rgba(0, 0, 0, 0.32) 0 0 15px;

  transition:
          bottom 375ms cubic-bezier(0.4, 0.0, 0.2, 1),
          background-color 375ms cubic-bezier(0.4, 0.0, 0.2, 1);

  z-index: $zGameBetsTabSavingProgress;

  &--success {
    background-color: lighten($success, 30%);
  }

  &__success-info {
    display: flex;
    align-items: center;

    svg {
      margin-right: 5px;
    }
  }

  &__saving-overlay {
    position: absolute;
    top: 0;
    left: -20px;
    right: -20px;
    bottom: -100px; // also cover the flags which exceed the bottom border of the parent div a bit
    opacity: 0.5;
    background-color: white;
    z-index: $zGameBetsTabSavingProgress;
  }
}

